--- a/js/package.json
+++ b/js/package.json
@@ -3,11 +3,12 @@
     "dotenv": "^16.4.7",
     "fs": "^0.0.1-security",
     "net": "^1.0.2",
-    "readline": "^1.3.0",
     "readline-sync": "^1.4.10"
   },
   "scripts": {
-    "start": "node main.js"
+    "start": "node main.js",
+    "server": "node server.js",
+    "client": "node player.js"
   },
   "name": "js",
   "description": "JUST ONE Game",
