--- a/js/package.json
+++ b/js/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "fs": "^0.0.1-security",
     "net": "^1.0.2",
-    "readline-sync": "^1.4.10"
+    "readline": "^1.3.0"
   },
   "scripts": {
     "start": "node main.js",
